--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "author": "Deniz Acay",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "run": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
