--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "lodash": "^4.17.21",
     "sqlite3": "^5.1.4",
     "uuid": "^9.0.0"
   },
